	  examples/nxlines.
	* arch/graphics: Used apps/examples/nxlines to (finally) verify the NX
	  trapezoid drawing functions and (wide) line drawing functions.
	* arch/rgmp and configs/rgmp.  Yu Qiang has ported RGMP to the OMAP4430 (arm)
	  pandaboard and release the new RGMP 0.3 version. The main changes are: (1)
	  Separate configs/rgmp/x86 and configs/rgmp/arm configuration directory, and
	  (2) Extract architecture dependent code in arch/rgmp/include and
	  arch/rgmp/src into corresponding x86/ and arm/ directories.
	* arch/arm/src/kinetis, arch/arm/include/kinetis, configs/kwikstick-k40:
	  Add a directory structure to support the port to the Kinesis KwikStik-K40.
	  There is no real substance in the initial check-in; only the directory
	  structure and skeleton files (Code complete on 8/15/11).
	* arch/arm/include/armv7-m, arch/arm/src/armv7-m, etc.: Rename all cortexm3
	  directories and files to armv7-m; Change name of of all CORTEXM3 constants
	  to ARMV7M.  This is a major namespace change needed to cleanly support the
	  ARM Cortex-M4 which is also in the ARMv7 M Series (specifically, ARMv7E-M).
	* sched/sig_initialize.c, sig_received.c, and mq_waitirq.c.  Fixed several
	  critical bugs related to signal handling initialization and for signals
	  the wake up tasks that are waiting to send or receive message queues.  In
	  the first two files, errors would prevent proper allocation of signal-related
	  structures from interrupt handlers.  In the second, there was missing
	  "clean-up" logic after a signal occurred, leaving the message queue in
	  a bad state and resulting in PANICs.  All are important.  (submitted by
	  hkwilton).
	* arch/arm/src/kinetis:  Added header files defining all Kinetis registers
	  and bit fields within all Kinetis registers.
	* configs/twr-k60n512:  Add support for the Kinetis K60 Tower board
	  (TWR-K60N512).
	* drivers/can.c:  Fixe a semaphore overflow problem in the CAN driver
	  (reported by Li Zhouy (Lzzy)).
