@@ -152,9 +152,9 @@ CONFIG_KINETIS_FLEXBUS=n
 CONFIG_KINETIS_UART0=n
 CONFIG_KINETIS_UART1=n
 CONFIG_KINETIS_UART2=n
-CONFIG_KINETIS_UART3=n
+CONFIG_KINETIS_UART3=y
 CONFIG_KINETIS_UART4=n
-CONFIG_KINETIS_UART5=y
+CONFIG_KINETIS_UART5=n
 CONFIG_KINETIS_ENET=n
 CONFIG_KINETIS_RNGB=n
 CONFIG_KINETIS_FLEXCAN0=n
@@ -225,9 +225,9 @@ CONFIG_KINETIS_PORTEINTS=n
 CONFIG_UART0_SERIAL_CONSOLE=n
 CONFIG_UART1_SERIAL_CONSOLE=n
 CONFIG_UART2_SERIAL_CONSOLE=n
-CONFIG_UART3_SERIAL_CONSOLE=n
+CONFIG_UART3_SERIAL_CONSOLE=y
 CONFIG_UART4_SERIAL_CONSOLE=n
-CONFIG_UART5_SERIAL_CONSOLE=y
+CONFIG_UART5_SERIAL_CONSOLE=n
 
 CONFIG_UART0_TXBUFSIZE=256
 CONFIG_UART1_TXBUFSIZE=256
